--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
         <link rel="stylesheet" href="css/index.css" type="text/css" />
     </head>
     <body>
-        <div id="speech-bubble">
-            You're at N 43&deg; 47.382 W 091&deg; 14.546
-        </div>
-        <div id="log-button">
-            Log It!
+        <div id="phone-border">
+            <div id="speech-bubble">
+                You're at <br />
+                <span>N 43&deg; 47.382</span><br />
+                <span>W 091&deg; 14.546</span>
+            </div>
+            <div id="log-button">
+                <span id="button-text">Log It!</span>
+            </div>
         </div>
     </body>
 </html>
