--- a/index.html
+++ b/index.html
@@ -2,18 +2,16 @@
 
 <html>
     <head>
-        <link rel="stylesheet" href="css/index.css" type="text/css" />
+        <link rel="stylesheet" href="css/styles.css" type="text/css" />
     </head>
-    <body>
-        <div id="phone-border">
-            <div id="speech-bubble">
-                You're at <br />
-                <span>N 43&deg; 47.382</span><br />
-                <span>W 091&deg; 14.546</span>
-            </div>
-            <div id="log-button">
-                <span id="button-text">Log It!</span>
-            </div>
+    <body class="flex-stack flex-center">
+        <div class="flex-child">
+            <div>You're at</div>
+            <div>N 43&deg; 47.382</div>
+            <div>W 091&deg; 14.546</div>
+        </div>
+        <div class="flex-child">
+            <div>Log It!</div>
         </div>
     </body>
 </html>
