--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
-<!DOCTYPE html>
-
 <html>
-    <head>
-        <link rel="stylesheet" href="css/styles.css" type="text/css" />
+  <head>
+    <!-- The gear icon is currently from The Noun Project-->
+    <!-- Its a really cool resource I should save for further work -->
+    <script type="text/javascript" src="index.js"></script>
     </head>
-    <body class="flex-stack flex-center">
-        <div class="flex-child">
-            <div>You're at</div>
-            <div>N 43&deg; 47.382</div>
-            <div>W 091&deg; 14.546</div>
-        </div>
-        <div class="flex-child">
-            <div>Log It!</div>
-        </div>
+    <body onload="Events.OnLoad()">
+        <div>You're at</div>
+        <div id="latitude">N 43&deg; 47.382</div>
+        <div id="longitude">W 091&deg; 14.546</div>
+        <button>Log It!</button>
+        <button onclick="Commands.PullLocation()" id="username">Brandon Heinrich</button>
     </body>
 </html>
