--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div>You're at</div>
         <div id="latitude">N 43&deg; 47.382</div>
         <div id="longitude">W 091&deg; 14.546</div>
-        <button>Log It!</button>
+        <button onclick="alert(5)">Log It!</button>
         <button onclick="Commands.PullLocation()" id="username">Brandon Heinrich</button>
     </body>
 </html>
