--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <div id="longitude">W 091&deg; 14.546</div>
         <button>Log It!</button>
         <button onclick="alert(4)" id="username">Brandon Heinrich</button>
-        <button id="mylog" onclick="console.log(6)"></button>
+        <div id="mylog"></div>
     </body>
 </html>
