--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div id="latitude">N 43&deg; 47.382</div>
         <div id="longitude">W 091&deg; 14.546</div>
         <button>Log It!</button>
-        <button onclick="alert(4)" id="username">Brandon Heinrich</button>
+        <button onclick="alert(4)" id="username"></button>
         <div id="mylog"></div>
     </body>
 </html>
