--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
   <head>
     <!-- The gear icon is currently from The Noun Project-->
     <!-- Its a really cool resource I should save for further work -->
-    <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/logger.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
     </head>
     <body onload="Events.OnLoad()">
         <div>You're at</div>
         <div id="latitude">N 43&deg; 47.382</div>
         <div id="longitude">W 091&deg; 14.546</div>
         <button>Log It!</button>
-        <button onclick="alert(4)" id="username"></button>
+        <button onclick="console.log(4)" id="username"></button>
         <div id="mylog"></div>
     </body>
 </html>
