--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
         <button>Log It!</button>
         <button onclick="console.log(4)" id="username"></button>
         <div id="mylog"></div>
+        <script>
+          document.addEventListener("deviceready", Events.DeviceReady, false);
+          document.callBulshit();
+        </script>
     </body>
 </html>
