I forgot to likn to cordova...

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <!-- The gear icon is currently from The Noun Project-->
     <!-- Its a really cool resource I should save for further work -->
+    <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/logger.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     </head>
@@ -12,7 +13,7 @@
         <button>Log It!</button>
         <button onclick="console.log(4)" id="username"></button>
         <div id="mylog"></div>
-        <script>
+        <script  type="text/javascript">
           document.addEventListener("deviceready", Events.DeviceReady, false);
           document.callBulshit();
         </script>
